<resources>
    <string name="app_name">WUT2EAT29</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="which_resturant">Which Resturant to go?</string>>
    <string name="invitationcard">%s send you an invitation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_contact">Add Contact</string>
    <string name="start_vote">Start Vote</string>
    <string name="invitation">Invitation</string>
    <string name="setting">Setting</string>
    <string name="map">Map</string>
    <string name="friends">Friends</string>
    <string name="me">Me</string>
    <string name="Default">Default</string>
    <string name="top_3_choice">Top 3 Choice</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="view_history">View History</string>
    <string name="view_votes">View My Votes</string>
    <string name="title">WUT2EAT29</string>
    <string name="search_place_hint">Search Place</string>
    <string name="search">Search</string>
    <string name="user_id">User ID</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="title_activity_login">WUT 2 EAT 2 9</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="status">Status</string>
    <string name="log_out">Log out</string>
    <string name="busy">Busy</string>
    <string name="not_disturb">Not Disturb</string>
    <string name="free">Free</string>
    <string name="confirm">Confirm</string>
    <string name="editNickName">Edit Nickname</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_with_google">Sign in with Google</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="login_error">Login Error!</string>
    <string name="no_passwords">You have no passwords</string>
    <string name="action_add">Add</string>
    <string name="action_logout">Logout</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="showPassword">Show password</string>
    <string name="save">Save</string>
    <string name="edit_password_title">Edit Password</string>
    <string name="service">Service</string>
    <string name="add_password_title">Add Password</string>
    <string name="add">Add</string>
    <string name="login_with_rosefire">Login with Rosefire</string>
    <string name="register">Register</string>
    <string name="registet_fail">Register Failed</string>
    <string name="not_decided_yet">Not Decided Yet</string>
    <string name="sorry">Sorry</string>
    <string name="user_does_not_exist">User does not exist!</string>
    <string name="success">Success!</string>
    <string name="invitation_sent">The invitation has been sent</string>
    <string name="your_today_s_vote_s">No vote is own by you yet</string>
    <string name="invite">Invite</string>
    <string name="choice_of_day">You Choice of Day</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="make_choice_first">Please make a choice first.</string>
    <string name="notification_sent">Notification sent out!</string>
    <string name="message">Message</string>
    <string name="status_free">Status Set to Free</string>
    <string name="status_busy">Status Set to Busy</string>
    <string name="upload_avatar">Upload a Avatar</string>
    <string name="s_ask_you_eat_together">%s ask you to eat together</string>
    <string name="do_vote">Do Vote</string>
    <string name="uploadLimit">Pleas Upload an Image less than 3MB</string>
    <string name="restaurant_s">Restaurant: %s</string>

</resources>
