<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.l8411.wut2eat29.Fragment.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/IDView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/Default" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="83dp"
            android:src="@drawable/wexin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/IDView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/top_3_choice"
            android:textSize="20dp"
            android:id="@+id/textView2" />

        <TextView
            android:id="@+id/topChoiceA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/a" />

        <TextView
            android:id="@+id/topChoiceB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/topChoiceA"
            android:layout_below="@+id/topChoiceA"
            android:text="@string/b" />

        <TextView
            android:id="@+id/topChoiceC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/topChoiceB"
            android:layout_below="@+id/topChoiceB"
            android:text="@string/c" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topChoiceC"
            android:layout_centerHorizontal="true"
            android:text="@string/view_history"
            android:id="@+id/history" />

        <TextView
            android:id="@+id/votes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/history"
            android:layout_centerHorizontal="true"
            android:text="@string/view_votes" />

    </RelativeLayout>

</FrameLayout>
