<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SettingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.SettingPageFragment">


    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewLanguage"
        android:background="@drawable/textview_border"
        android:padding="10dp"
        android:text="@string/status"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/textview_border"
        android:padding="10dp"
        android:text="@string/language"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewStatus"
        android:background="@drawable/textview_border"
        android:padding="10dp"
        android:text="@string/log_out"
        android:textSize="30sp" />

</RelativeLayout>